fix : navigate login.

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,12 @@
-<div class="d-flex align-items-center h-100 justify-content-center">
+<div class="d-flex align-items-center h-75 justify-content-center">
     <nb-card class="w-75" [nbSpinner]="isLoading">
+        <nb-card-header >
+            <div class="d-flex align-items-center h-100 justify-content-center">
+                <span class="p-2">
+                    FORGOT PASSWORD
+                </span>
+            </div>
+        </nb-card-header>
         <nb-card-body>
             <form (ngSubmit)="submit()">
                 <div class="mb-3 form-group">
@@ -10,6 +17,7 @@
                     </nb-form-field>
                 </div>
                 <button nbButton hero status="primary" type="submit" [disabled]="!email">Send</button>
+                <a class="float-end pt-2"  [routerLink]="['../login']">Login</a>
             </form>
         </nb-card-body>
     </nb-card>
