feat: Show patient details using patientId

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,6 +1,6 @@
 <nb-card>
     <nb-card-body>
-        <span class="h4">Vasanth Jagadeesan</span>
+        <span class="h4">{{patient.firstName}} {{patient.lastName}}</span>
     </nb-card-body>
 </nb-card>
 <nb-route-tabset [tabs]="tabs"></nb-route-tabset>
