--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -7,7 +7,7 @@
             </nb-form-field>
         </nb-list-item>
         <nb-list-item *ngFor="let user of users" [routerLink]="[user?.patientID, 'vitals']">
-            <nb-user [name]="user.firstName" [name]="user.lastName" [title]="user.email">
+            <nb-user [name]="user.name" [title]="user.email">
             </nb-user>
         </nb-list-item>
         <nb-list-item *ngIf="!users?.length">
