--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -2,8 +2,8 @@
     <nb-card class="w-75" [nbSpinner]="isLoading">
         <nb-card-header >
             <div class="d-flex align-items-center h-100 justify-content-center">
-                <span class="p-2">
-                    FORGOT PASSWORD
+                <span class="ps-2">
+                    <img [src]="logo" alt="" height="50">
                 </span>
             </div>
         </nb-card-header>
