--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,10 +1,10 @@
 <form (ngSubmit)="submit()" class="d-flex align-items-center h-75 justify-content-center">
     <nb-card class="w-75" [nbSpinner]="isLoading">
-        <nb-card-header >
+        <nb-card-header>
             <div class="d-flex align-items-center h-100 justify-content-center">
-                <span class="p-2">
-                    LOGIN
-                </span>
+                <span class="ps-2">
+                    <img [src]="logo" alt="" height="50">
+                  </span>
             </div>
         </nb-card-header>
         <nb-card-body>
