feat: Binded profile details

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,6 +1,20 @@
 <nb-card>
     <nb-card-body>
-        <span class="h4">{{patient.firstName}} {{patient.lastName}}</span>
+        <h4 class="mb-0">{{patient.firstName}} {{patient.lastName}}</h4>
+        <div class="row">
+            <div class="col-md-4">
+                <p>Email: {{patient.email}}</p>
+                <p>Phone Number: {{patient.phoneNumber}}</p>
+            </div>
+            <div class="col-md-4">
+                <p>DOB: {{patient.dob}}</p>
+                <p>Gender: {{patient.gender}}</p>
+            </div>
+            <div class="col-md-4">
+                <p>State: {{patient.state}}</p>
+                <p>Country: {{patient.country}}</p>
+            </div>
+        </div>
     </nb-card-body>
 </nb-card>
 <nb-route-tabset [tabs]="tabs"></nb-route-tabset>
