--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -4,12 +4,15 @@
             <nb-form-field>
                 <div class="row">
                     <div class="col-sm-10 position-relative">
-                            <nb-icon class="position-absolute top-40 start-30" nbPrefix icon="search-outline"></nb-icon>
+                            <div class="position-absolute align-middle p-2">
+                                    <nb-icon class="position-absolute align-text-bottom top-10 start-30" nbPrefix icon="search-outline"></nb-icon> 
+                            </div>
+                        <!-- <nb-icon class="position-absolute align-text-bottom top-10 start-30" nbPrefix icon="search-outline"></nb-icon> -->
                             <input type="search"  name="searchText" fullWidth status="success" nbInput  [(ngModel)]="searchText" (ngModelChange)="getData()">
                     </div>
                     <div class="col-sm-2">
                         <div class="d-flex flex-row-reverse" data-toggle="tooltip" data-placement="top" title="Add New Patient">
-                                <button ghost="true" class="float-right border border-primar" nbButton status="info">+</button>
+                                <button ghost="true" class="float-right border border-primar"  [routerLink]="['add']"  nbButton status="info">+</button>
                         </div>
                 </div>
                 </div>
