--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -1,19 +1,23 @@
-<nb-card size="large" [nbSpinner]="isLoading" > 
+<nb-card size="large" [nbSpinner]="isLoading">
     <nb-list>
         <nb-list-item>
             <nb-form-field>
                 <div class="row">
                     <div class="col-sm-10 position-relative">
-                            <div class="position-absolute align-middle p-2">
-                                    <nb-icon class="position-absolute align-text-bottom top-10 start-30" nbPrefix icon="search-outline"></nb-icon> 
-                            </div>
-                            <input type="search"  name="searchText" fullWidth status="success" nbInput  [(ngModel)]="searchText" (ngModelChange)="getData()">
+                        <div class="position-absolute align-middle p-2">
+                            <nb-icon class="position-absolute align-text-bottom top-10 start-30" nbPrefix
+                                icon="search-outline"></nb-icon>
+                        </div>
+                        <input type="search" name="searchText" fullWidth status="success" nbInput
+                            [(ngModel)]="searchText" (ngModelChange)="getData()">
                     </div>
                     <div class="col-sm-2">
-                        <div class="d-flex flex-row-reverse" data-toggle="tooltip" data-placement="top" title="Add New Patient">
-                                <button ghost="true" class="float-right border border-primar"  [routerLink]="['add-pateient']"  nbButton status="info">+</button>
+                        <div class="d-flex flex-row-reverse" data-toggle="tooltip" data-placement="top"
+                            title="Add New Patient">
+                            <button ghost="true" class="float-right border border-primar"
+                                [routerLink]="['create']" nbButton status="info">+</button>
                         </div>
-                </div>
+                    </div>
                 </div>
             </nb-form-field>
         </nb-list-item>
