--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -190,13 +190,13 @@
                             <div class="row">
                                     <div class="col-sm-4 col-lg-6 col-md-4">
                                     </div>
-                                    <div class="col-sm-8 col-lg-6 col-md-8 d-flex justify-content-end">
+                                    <div class="col-sm-8 col-lg-6 col-md-8 p-0 d-flex justify-content-end">
                                         <div class="row">
                                             <div class="col-sm-1"></div>
                                             <div class="col-sm-4 d-flex justify-content-end">
                                                 <button nbButton status="danger" (click)=cancelPatient()>Cancel</button>
                                             </div>
-                                            <div class="col-sm-7">
+                                            <div class="col-sm-7 d-flex justify-content-right">
                                                 <button  [disabled]="!profileForm.valid" nbButton status="success">Create Patient</button>
                                                 {{profileForm.addressDetails}}
                                             </div>
