--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,1 +1,33 @@
-<p>care-team works!</p>
+<nb-card size="giant" style="overflow: auto">
+    <nb-card-header status="primary">
+        <div class="row">
+            <div class="col-10">
+                Care Team
+            </div>
+            <div class="col-1 p-0">
+                <button nbButton size="small" (click)="open(dialog)">
+                    <nb-icon icon="plus-outline"></nb-icon>
+                </button>
+            </div>
+            <div class="col-1 p-0">
+                <button nbButton hero status="primary" size="small">EDIT</button>
+            </div>
+        </div>
+    </nb-card-header>
+    <nb-card-body>
+        No caregivers specified. Tap + to add a caregiver
+    </nb-card-body>
+</nb-card>
+<ng-template #dialog>
+    <nb-card>
+        <nb-card-header>Invite caregiver</nb-card-header>
+        <nb-card-body>
+            <input nbInput="" placeholder="Caregiver Username"
+                class="size-medium status-basic shape-rectangle nb-transition" [(ngModel)]="careGiver" name="careGiver">
+            </nb-card-body>
+        <nb-card-footer>
+            <button nbButton (click)="refclose()">Cancel</button>
+            <button nbButton (click)="notify()">Ok</button>
+        </nb-card-footer>
+    </nb-card>
+</ng-template>
