--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -66,10 +66,9 @@
                                         <label for="inputMorbidity" class="label"> <span class="danger"></span>
                                             Morbidity</label>
                                         <div>
-                                            <nb-select size="small" class="w-100" id="inputMorbidity" formControlName="morbidity" placeholder="Select Morbidity">
+                                            <nb-select multiple size="small" class="w-100" id="inputMorbidity" formControlName="morbidity" placeholder="Select Morbidity">
                                                 <nb-option value="">Select Morbidity</nb-option>
                                                 <nb-option *ngFor="let item of morbidityID" [value]="item.id">{{item?.name}}</nb-option>
-                                            
                                             </nb-select>
                                         </div>
                                     </div>
