--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,14 +1,14 @@
 <nb-card>
     <nb-card-body>
-        <h4 class="mb-0">{{patient.firstName}} {{patient.lastName}}</h4>
+        <h4 class="my-0">{{patient.firstName}} {{patient.lastName}}</h4>
         <div class="row">
             <div class="col-md-4">
-                <p>Email: {{patient.email}}</p>
+                <p><nb-icon icon="envelope" ></nb-icon> {{patient.email}}</p>
                 <p>Phone Number: {{patient.phoneNumber}}</p>
             </div>
             <div class="col-md-4">
                 <p>DOB: {{patient.dob}}</p>
-                <p>Gender: {{patient.gender}}</p>
+                <p nbTooltip="Gneder">Gender: {{patient.gender}}</p>
             </div>
             <div class="col-md-4">
                 <p>State: {{patient.state}}</p>
