fix: set clinic title.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,6 +5,7 @@
                 <span class="ps-2">
                     <img [src]="logo" alt="" height="50">
                   </span>
+                  <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
             </div>
         </nb-card-header>
         <nb-card-body class="mb-0">
