--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -9,7 +9,7 @@
       </span>
       <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
       <span class="ms-auto">
-        <nb-user name="John Doe" title="Engineer"></nb-user>
+        <nb-user [name]="profile?.screenName" title="Care Coordinator" [picture]="profile?.imageURL"></nb-user>
       </span>
     </div>
   </nb-layout-header>
