--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -2,22 +2,19 @@
     <nb-card-body>
         <div class="row">
             <div class="col-md-3">
-               <h4> <nb-user [name]="patientName" title="{{patient?.email}}"></nb-user></h4>
+               <h4> <nb-user [name]="patientName" [title]="patient?.email" [picture]=""></nb-user></h4>
     </div>
             <div class="col-md-3">
-                <p> <nb-icon icon="phone" pack="font-awesome"></nb-icon>  {{patient.phoneNumber}}</p>
+                <p> <nb-icon icon="phone" pack="font-awesome"></nb-icon>  {{patient?.phoneNumber}}</p>
+                <p><nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon> {{patient?.dob}}</p>
+                <p> <nb-icon icon="venus-mars" pack="font-awesome"  nbTooltip="Gender" ></nb-icon>  {{patient?.gender}}</p>
             </div>
-            <div class="col-md-3">
-                <p><nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon> {{patient.dob}}</p>
-                <p> <nb-icon icon="venus-mars" pack="font-awesome"  nbTooltip="Gender" ></nb-icon> {{patient.gender}}</p>
-            </div>
-            <div class="col-md-3">
-                <p>
-                <span><nb-icon icon="map-marker-alt"></nb-icon></span>
-                <span>City: {{patient.city}}</span><br>
-                <span>State: {{patient.state}}</span><br>
-                <span>Country: {{patient.country}}</span><br>
-                </p>
+            <div class="col-md-6">
+              
+                <p><nb-icon icon="map-marker-alt"></nb-icon></p>
+                <p>City: {{patient?.city}}</p>
+                <p>State: {{patient?.state}}</p>
+                <p>Country: {{patient?.country}}</p>
             </div>
         </div>
     </nb-card-body>
